# xe_tham_do

./: .gitignore  Dockerfile  docker-compose.yml  readme.md  sodo.pdsprj  xe_tham_do.py
android/: README.md  pubspec.yaml
android/.dart_tool/: package_config.json  package_config_subset
android/android/app/: build.gradle.kts
android/ios/Runner/: Info.plist
android/ios/Runner.xcodeproj/: project.pbxproj
android/lib/: main.dart
android/linux/: CMakeLists.txt
android/linux/runner/: my_application.cc
android/macos/Runner.xcodeproj/: project.pbxproj
android/web/: index.html  manifest.json
android/windows/: CMakeLists.txt
android/windows/runner/: Runner.rc  main.cpp
articubot_one/: CMakeLists.txt  README.md  package.xml
articubot_one/config/: find_grass_params_robot.yaml  find_grass_params_sim.yaml  mapper_params_online_async.yaml
articubot_one/description/: ros2_control.xacro
articubot_one/launch/: find_grass.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py
config/: navigate_through_poses_w_replanning_and_recovery.xml
diffdrive_arduino/: README.md
diffdrive_arduino/firmware/ROSArduinoBridge/: ROSArduinoBridge.ino  motor_driver.ino
find_grass/: README.md  package.xml  setup.py
find_grass/config/: find_grass_params_example.yaml
find_grass/find_grass/: find_grass.py
find_grass/launch/: example_launch_include.launch.py  find_grass.launch.py
python/: check_cuda.sh  safety_teleop.py  test_cuda.py  test_xu_ly_anh.py  xe_tham_do.py
ros2_ws/diffdrive_arduino/firmware/: README.md
ros2_ws/find_grass/: setup.cfg
ros2_ws/find_grass/find_grass/: follow_grass.py  process_image.py
ros2_ws/libs/rsl/: CMakeLists.txt
ros2_ws/libs/rsl/cmake/: rsl-config.cmake
ros2_ws/libs/tcb_span/: CMakeLists.txt  package.xml
ros2_ws/src/diffdrive_arduino/: CMakeLists.txt  README.md
ros2_ws/src/libs/tcb_span/: CMakeLists.txt
ros2_ws/src/libs/tl_expected/: CMakeLists.txt  package.xml
ros2_ws/src/xe_tham_do/: CMakeLists.txt  package.xml
ros2_ws/xe_tham_do/launch/: find_grass.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
xe_tham_do/: pubspec.yaml
xe_tham_do/launch/: rsp.launch.py
xe_tham_do/lib/: main.dart
xe_tham_do/test/: widget_test.dart
xu_ly_anh/notebooks/: thermal_detection_notebook.ipynb
xu_ly_anh/scripts/: nhan_dien_dam_chay.py  thermal_detect.py
(+83 files in other folders)
