<?xml version="1.0"?>
<package format="2">
    <name>tcb_span</name>
    <version>0.1.0</version>
    <description>Header-only C++20 span implementation by tcbrindle, wrapped for ROS2.</description>
    <maintainer email="your@email.com">Your Name</maintainer>
    <license>BSL-1.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>